# le_completeness_analysis

./: .gitignore  README.md  example.env  pyproject.toml  requirements.txt
device_location_analysis/: debug_opencellid.py  device_location_analysis.ipynb
le_completeness_analysis/: analysis.ipynb  analysis_colab.ipynb  analysis_colab_daily_completeness.ipynb  config.py  logger.py
le_completeness_analysis/api_clients/: __init__.py  ops_api_client.py  public_api_client.py  rest_api_client.py
le_completeness_analysis/data/: DD03710132282.csv  DD03710132886.csv  DD03710133428.csv  DD03710134122.csv  DD03710135897.csv  DD03710136093.csv  DD03710138691.csv  DD03710141038.csv  DD03710142213.csv  DD03710142796.csv  DD03710145651.csv  DD03710145719.csv  DD03710151428.csv  DD03710151455.csv  DD03710151536.csv  DD03710151912.csv  DD03710152704.csv  DD03710152885.csv  DD03710152978.csv  DD03710157518.csv  DD03710158297.csv  DD03710159252.csv  DD03710159800.csv  DD03710159907.csv  DD03710162295.csv  DD03710163414.csv  DD04108193909.csv  DD04108397780.csv  DD04108399697.csv  DD04108813615.csv  DD04108897548.csv  DD04108984728.csv  DD04108984805.csv  DD04108985029.csv  DD05335139061.csv  DD05335141133.csv  DD05335142023.csv  DD05335142631.csv  DD05335144304.csv  DD05335168995.csv  (+771 more)
le_completeness_analysis/le_completeness_analysis/data/: decomissioned_devices.csv
temp/: request_status.py
